2008-04-21  Stipe Tolj  <stolj at kannel.org>
    * gwlib/socket.[ch]: add host_port() function in accordance to host_ip()
      to get the port number of a TCP connection in use.

2008-04-17  Andreas Fink <andreas at fink.org>
    * gw/smsc/smsc_ois.c: fixed compiler warning.
    
2008-04-16  Andreas Fink <andreas at fink.org>
    * wap/wsp_[strings|unit|init|pdu].c: fixed compiler warnings due to 
      signed/unsigned char mismatch.

2008-04-09  Stipe Tolj  <stolj at kannel.org>
    * Makefile.in: fix 'make clean' target, by fixing find expression.

2008-04-09	Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: add missing documentation block for 
      'alt-dcs' in smsc group.

2008-03-23	Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_at.c: fix at2_wait_modem_command() to ignore specific OK
      responses for AT+CNMA acknowledges.
      Thanks to Marius Huysamen <mhuysamen at mhg.co.za> for providing patch.
      [Msg-Id: <47C93579.8000409@mhg.co.za>]

2008-03-15 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml, gw/smscconn.c, gw/smscconn_p.h,
      gwlib/cfg.def: Implemented max-sms-octets config option that
      allows to set maximum length of SMS for SMSC.

2008-03-10  Andreas Fink <andreas at fink.org>
    * gw/smsc/*: fixed a lot of warning due to pointer type mismatch
    ( (char *) versus unsinge char * and the like)

2008-03-06  Andreas Fink <andreas at fink.org>
    * gw/smsc/smsc_at.c: fixed an infinite loop for receiving delivery
      reports with SMSC string being empty.

2008-02-21	Stipe Tolj  <stolj at kannel.org>
    * gwlib/fdset.h: remove trailing ';' in a macro. 
      Thanks to Paul Bagyenda from Mbuni for spotting it.
      [Msg-Id: <5B21C330-DA5A-4E6D-B431-9AB31479A446@dsmagic.com>]
      
2008-02-19	Stipe Tolj  <stolj at kannel.org>
    * gw/dlr.c: adding more debug output for the warning() in case the DLR 
      could not be resolved. NLC.